--- a/Public/css/header.css
+++ b/Public/css/header.css
@@ -1,8 +1,58 @@
+@import url('https://fonts.googleapis.com/css?family=Lobster&display=swap');
+
 body {
     padding: 0px;
     margin: 0px;
-    /*background-color: #3e5667;*/
 }
 
 header {
+    padding: 10px;
+    background-color: #ff0000;
+}
+
+header span {
+    font-family: 'Lobster', cursive;
+    font-size: 25px;
+}
+main {
+    display: flex;
+}
+main aside {
+    background-color: #AA6E00;
+    width: 20%;
+}
+
+main aside ul {
+    display: flex;
+    flex-direction: column;
+    padding: 0px;
+}
+
+main aside ul li {
+    padding-left: 40px;
+    padding-top: 17px;
+    font-size: 22px;
+    color: black;
+    height: 60px;
+    list-style-type: none;
+}
+
+main aside ul li a {
+    color: black;
+    text-decoration: none;
+}
+
+main aside ul li:hover {
+    cursor: pointer;
+    background-color: #704800;
+}
+
+main aside ul li a:hover {
+    color: black;
+    text-decoration: none;
+}
+
+main section{
+    width: 80%;
+    background-color: #C7C7C7;
 }
