--- a/Public/templatesHbs/clientTemplate.hbs
+++ b/Public/templatesHbs/clientTemplate.hbs
@@ -1,4 +1,4 @@
-<tr>
+<tr class="see_client" client="{{ id }}">
     <td class="text-left">{{ firstName }}</td>
     <td class="text-left">{{ lastName }}</td>
     <td class="text-left">{{ town }}</td>
