--- a/Public/css/client.css
+++ b/Public/css/client.css
@@ -14,6 +14,15 @@
     border-top: none;
 }
 
+.add_bill_button {
+    background-color: #00AA00;
+    color: white;
+    float: right;
+    border: none;
+    padding: 7px;
+    margin-bottom: 18px;
+}
+
 .add_payment thead {
     color: black;
     text-align: center;
@@ -67,4 +76,22 @@
 .add_payment table tr td:last-child,
 .add_payment table tr th:last-child {
     border-right: 0;
+}
+
+.client_info {
+    text-align: center;
+    margin-left: 320px;
+}
+
+.client_info .client_info_first {
+    text-align: left;
+    padding: 20px;
+    border-radius: 50px;
+    width: 60%;
+    background-color: white;
+}
+
+.client_info .client_info_first div {
+    text-align: center;
+    /*margin-bottom: 15px;*/
 }
