--- a/Public/templatesHbs/addBillTemplate.hbs
+++ b/Public/templatesHbs/addBillTemplate.hbs
@@ -1,4 +1,4 @@
-<tr class="active">
+<tr class="ready-payment">
     <td class="start_payment">{{ start }}</td>
     <td class="end_payment last_bill_to" last_bill_to="{{ endSeconds }}">{{ end }}</td>
     <td> {{ sum }}лв.</td>
