--- a/Public/css/header.css
+++ b/Public/css/header.css
@@ -10,8 +10,7 @@ body {
 }
 
 header {
-    display: flex;
-    justify-content: space-between;
+    color: white;
     padding: 10px;
     background-color: #ff0000;
 }
@@ -28,6 +27,7 @@ header div .admin_panel a {
 header p {
     font-family: 'Lobster', cursive;
     font-size: 25px;
+    padding: 0px 10px;
 }
 
 header .hamburger {
@@ -87,6 +87,49 @@ main aside ul li:hover {
 main aside ul li a:hover {
     color: black;
     text-decoration: none;
+}
+
+
+
+
+/* Navbar container */
+.navbar {
+    padding: 0px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.dropdown-content {
+    z-index: 1;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    background-color: #FF0000;
+}
+
+.start_panel {
+    display: none;
+}
+
+.dropdown-content a {
+    color: white;
+    padding: 15px;
+    text-decoration: none;
+}
+
+.dropdown-content a:hover {
+    background-color: #AA0000;
+    color: #FFF;
+}
+
+.dropdown p {
+    margin: 0px;
+    cursor: pointer;
+}
+
+.dropdown p:hover {
+    background-color: #AA0000;
 }
 
 main section{
